# nanobot

./: Dockerfile  SECURITY.md  docker-compose.yml  pyproject.toml
docs/: chat-apps.md  configuration.md  quick-start.md
nanobot-channel-whatsapp/: pyproject.toml
nanobot-channel-whatsapp/nanobot_channel_whatsapp/: __init__.py  channel.py
nanobot/cli/: commands.py
