[project]
name = "nanobot-channel-whatsapp"
version = "0.1.0"
description = "HTTP webhook-style channel plugin for nanobot (WhatsApp-oriented naming)"
requires-python = ">=3.11"
dependencies = ["nanobot-ai", "aiohttp>=3.9.0,<4.0.0"]

[project.entry-points."nanobot.channels"]
whatsapp = "nanobot_channel_whatsapp:WhatsAppChannel"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nanobot_channel_whatsapp"]
